# Blog_Generator

./: README.md  app.py  pyproject.toml  requirements.txt
src/graph/: graph_builder.py
src/llms/: groqllm.py
src/nodes/: blog_node.py
src/states/: blogstate.py
